[package]
name = "db_to_json_1"
version = "0.1.0"
edition = "2021"
authors = ["Mike AntonovMA@outlook.com"]

[dependencies]
blockstack-core = {git = "https://github.com/stacks-network/stacks-blockchain.git", branch = "master"}
rusqlite = { version = "*", features = ["bundled"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
