[package]
name = "db_to_json_1"
version = "0.1.0"
edition = "2021"
authors = ["Mike AntonovMA@outlook.com"]

[dependencies]
blockstack-core = {git = "https://github.com/stacks-network/stacks-blockchain.git", branch = "master"}
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rusqlite = { version = "*", features = ["bundled"] }
serde_json = "1.0.99"
shellexpand = "3"
thiserror = "1.0.40"
